Add unit test for Evaluator

--- a/CanocialEquationChanger/UnitTest/UnitTest.vcxproj.filters
+++ b/CanocialEquationChanger/UnitTest/UnitTest.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="NumberTermUnitTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EvaluatorUnitTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
